fixed button spacing

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -37,7 +37,3 @@
 #login-title {
   margin-bottom: 25px;
 }
-
-button {
-  margin-left: 20px;
-}
