--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -37,7 +37,3 @@
 #register-title {
   margin-bottom: 25px;
 }
-
-button {
-  margin-left: 20px;
-}
